--- a/css/main.css
+++ b/css/main.css
@@ -175,7 +175,7 @@ header {
     width: 100%; }
     header .header-content .header-content-inner h1 {
       margin-top: 0;
-      margin-bottom: 0; }
+      margin-bottom: 60px; }
       @media (min-width: 769px) {
         header .header-content .header-content-inner h1 {
           font-size: 46px !important; } }
@@ -188,7 +188,7 @@ header {
     header {
       min-height: 100%; }
       header .header-content {
-        padding: 200px 15px; }
+        padding: 200px 15px 20px; }
         header .header-content .header-content-inner {
           max-width: 1000px;
           margin-left: auto;
