--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,9 @@ body {
   width: 100%; }
 
 body {
-  font-family: 'lato_regular', sans-serif; }
+  font-family: 'lato_regular', sans-serif;
+  font-size: 18px;
+  line-height: 26px; }
 
 hr {
   border-color: #00ADE6;
@@ -65,8 +67,14 @@ h5,
 h6 {
   font-family: 'lato_light', sans-serif; }
 
+h2 {
+  color: #00ADE6;
+  margin-bottom: 30px;
+  font-size: 32px;
+  font-weight: 300; }
+
 p {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.5;
   margin-bottom: 20px; }
 
@@ -242,55 +250,28 @@ header {
             background-size: 47px 67px; }
           header .sunrun-stats-block .col-md-2.lightning {
             background-image: url("../img/lightning.svg");
-            background-size: 72px 72px; } }
+            background-size: 72px 72px; }
+        header .sunrun-stats-block .text-muted {
+          color: #ffffff;
+          font-size: 12px;
+          margin-bottom: 10px;
+          margin-top: 20px; } }
 
 .section-heading {
   margin-top: 0; }
 
-.portfolio-box {
-  position: relative;
-  display: block;
-  max-width: 650px;
-  margin: 0 auto; }
-  .portfolio-box .portfolio-box-caption {
-    color: white;
-    opacity: 0;
-    display: block;
-    background: rgba(0, 173, 230, 0.9);
-    position: absolute;
-    bottom: 0;
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    -webkit-transition: all 0.35s;
-    -moz-transition: all 0.35s;
-    transition: all 0.35s; }
-    .portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
-      width: 100%;
-      text-align: center;
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%); }
-      .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
-      .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-        font-family: 'lato_regular', Arial, sans-serif;
-        padding: 0 15px; }
-      .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
-        text-transform: uppercase;
-        font-weight: 600;
-        font-size: 14px; }
-      .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-        font-size: 18px; }
-  .portfolio-box:hover .portfolio-box-caption {
-    opacity: 1; }
-  @media (min-width: 769px) {
-    .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
-      font-size: 16px; }
-    .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-      font-size: 22px; } }
-
-.call-to-action h2 {
-  margin: 0 auto 20px; }
+#member-benefits {
+  background-image: url("../img/bg-gradient-triangle.png");
+  background-repeat: no-repeat;
+  background-size: auto auto;
+  background-position: right bottom; }
+  #member-benefits p {
+    margin-bottom: 50px; }
+  #member-benefits ul li {
+    margin-bottom: 30px; }
+  #member-benefits .text-muted {
+    color: #ffffff;
+    font-size: 12px; }
 
 .text-primary {
   color: #000000; }
