--- a/css/main.css
+++ b/css/main.css
@@ -55,9 +55,11 @@ a {
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
-  color: #00ADE6; }
+  color: #00ADE6;
+  outline: none; }
   a:hover, a:focus {
-    color: #0087b3; }
+    color: #0087b3;
+    outline: none; }
 
 h1,
 h2,
@@ -337,6 +339,97 @@ header {
     line-height: 27px;
     padding: 40px;
     max-width: 60%; }
+
+#why-sunrun .triple-hero-banner .hero-banner-block {
+  height: 313px;
+  width: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0;
+  color: #FFFFFF; }
+  #why-sunrun .triple-hero-banner .hero-banner-block a {
+    color: #ffffff; }
+  #why-sunrun .triple-hero-banner .hero-banner-block .link-spanner {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1; }
+  #why-sunrun .triple-hero-banner .hero-banner-block .bg-overlay {
+    padding: 30px 0px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.25); }
+  #why-sunrun .triple-hero-banner .hero-banner-block h3 {
+    color: #fff;
+    margin: 0 0 30px;
+    font-size: 44px;
+    font-weight: 300; }
+  #why-sunrun .triple-hero-banner .hero-banner-block.block-link {
+    position: relative; }
+    #why-sunrun .triple-hero-banner .hero-banner-block.block-link .more:after {
+      padding-left: 10px;
+      font-size: 12px;
+      line-height: 14px;
+      font-family: 'FontAwesome';
+      content: "\f05a";
+      display: inline-block;
+      position: relative;
+      top: 0;
+      left: 0;
+      transition: all 0.2s ease-out; }
+    #why-sunrun .triple-hero-banner .hero-banner-block.block-link:hover .more {
+      text-decoration: underline; }
+
+#faqs .pane-faq-content {
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 40px; }
+  #faqs .pane-faq-content .panel-group .panel-default {
+    padding-left: 0;
+    padding-right: 0;
+    border-color: transparent;
+    border-right-color: transparent;
+    border-bottom-color: transparent;
+    border-left-color: transparent;
+    border-right-color: transparent;
+    border-bottom: .5px solid #bcbec0;
+    border-left-color: transparent;
+    box-shadow: 0 0 0 transparent;
+    padding-left: 10px;
+    padding-right: 10px; }
+    #faqs .pane-faq-content .panel-group .panel-default .panel-heading {
+      background-color: transparent;
+      border-color: transparent;
+      padding-left: 0; }
+      #faqs .pane-faq-content .panel-group .panel-default .panel-heading .panel-title {
+        line-height: 24px; }
+        #faqs .pane-faq-content .panel-group .panel-default .panel-heading .panel-title .collapse-toggle:hover {
+          text-decoration: none; }
+        #faqs .pane-faq-content .panel-group .panel-default .panel-heading .panel-title .collapse-toggle .control {
+          font-size: 15px;
+          color: #00ade6;
+          margin-right: 10px; }
+          #faqs .pane-faq-content .panel-group .panel-default .panel-heading .panel-title .collapse-toggle .control:before {
+            content: '['; }
+          #faqs .pane-faq-content .panel-group .panel-default .panel-heading .panel-title .collapse-toggle .control:after {
+            content: ']'; }
+          #faqs .pane-faq-content .panel-group .panel-default .panel-heading .panel-title .collapse-toggle .control .plus-minus {
+            display: inline-block;
+            width: 10px;
+            text-align: center;
+            color: #00ade6; }
+            #faqs .pane-faq-content .panel-group .panel-default .panel-heading .panel-title .collapse-toggle .control .plus-minus:after {
+              font-size: 10px;
+              content: "\2014";
+              vertical-align: top;
+              font-family: 'lato_light',sans-serif; }
+        #faqs .pane-faq-content .panel-group .panel-default .panel-heading .panel-title .collapse-toggle.collapsed .control .plus-minus:after {
+          font-size: 15px;
+          content: "+"; }
 
 .text-primary {
   color: #000000; }
