fix heights of logos in nav, font sizes and background position on member benefits section

--- a/css/main.css
+++ b/css/main.css
@@ -273,7 +273,8 @@ header {
             background-size: 72px 72px; }
         header .sunrun-stats-block .text-muted {
           margin-bottom: 10px;
-          margin-top: 20px; } }
+          margin-top: 20px;
+          font-size: 12px; } }
 
 .section-heading {
   margin-top: 0; }
@@ -281,7 +282,7 @@ header {
 #member-benefits {
   background-image: url("../img/bg-gradient-triangle.png");
   background-repeat: no-repeat;
-  background-size: auto 65%;
+  background-size: 62% 65%;
   background-position: right bottom;
   padding-bottom: 10px; }
   #member-benefits .bottom-50 {
